angular exercises update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <h2>1. Wypisz kolejno pola z klasy: 'title', 'num1', 'num2', 'falsity'</h2>
 <p>To naprawdę fajne {{title}}</p>
 <p>A imię jego {{num1}} i {{num2}}</p>
-<p>True jest przeciwieństwem ...</p>
+<p>True jest przeciwieństwem {{falsity}}</p>
 
 <h5>2. Wypisz pola z obiektu 'dog'</h5>
 <p>Mój pies ma na imie: {{dog.name}}</p>
